Added sign out button

--- a/Views/CourierInfoPage.xaml
+++ b/Views/CourierInfoPage.xaml
@@ -11,6 +11,10 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
+    <ContentPage.ToolbarItems>
+        <ToolbarItem Text="Sign Out" Clicked="OnSignOutToolbarItemClicked"/>
+    </ContentPage.ToolbarItems>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
