--- a/Views/MainPage.xaml
+++ b/Views/MainPage.xaml
@@ -32,16 +32,16 @@
                            />
                 </ContentView>
             </StackLayout>
-            <StackLayout Orientation="Vertical" Padding="30,24,30,24" Spacing="10">
+            <StackLayout Orientation="Vertical" Padding="40,24,40,24" Spacing="10">
                 <Button Margin="0,2,0,0" Text="Scan barcode"
                         Clicked="OnOpenScannerButtonClicked"
                         BackgroundColor="{StaticResource Primary}"
                         TextColor="White" CornerRadius="15" />
             </StackLayout>
-             <Label Text="Scanned Barcodes:" TextColor="Black"
+             <Label Text="Scanned parcels: " TextColor="Black"
                     IsVisible="{Binding ScanResultsVisible}"
                     FontAttributes="Bold"
-                    Margin="10,5,0,0"/>
+                    Margin="45,5,0,0"/>
         </StackLayout>
         <ScrollView Grid.Row="1">
             <StackLayout Orientation="Vertical" Padding="15,8,15,15" Spacing="10">
