--- a/parcelmate/App.xaml
+++ b/parcelmate/App.xaml
@@ -1,12 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <Application xmlns="http://xamarin.com/schemas/2014/forms"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" xmlns:convert="clr-namespace:parcelmate.Converters"
              x:Class="parcelmate.App">
     <!--
         Define global resources and styles here, that apply to all pages in your app.
     -->
     <Application.Resources>
         <ResourceDictionary>
+            <convert:BoolToVisibilityConverter x:Key="BoolToVisibility" />
+            <convert:NegateBoolConverter x:Key="NegateBool" />
             <Color x:Key="Primary">#2196F3</Color>
             <Style TargetType="Button">
                 <Setter Property="TextColor" Value="White"></Setter>
